package com.alaa.hossam.aroundegypt.ui

const val HOME_CONTENT_TEST_TAG = "HOME_CONTENT_TEST_TAG"
const val SEARCH_CONTENT_TEST_TAG = "SEARCH_CONTENT_TEST_TAG"
const val SEARCH_FIELD_TEST_TAG = "SEARCH_FIELD_TEST_TAG"
const val CLEAR_SEARCH_BUTTON_TEST_TAG = "CLEAR_SEARCH_BUTTON_TEST_TAG"
const val EXPERIENCE_DIALOG_TEST_TAG = "EXPERIENCE_DIALOG_TEST_TAG"
const val EXPERIENCE_LIST_ITEM_TEST_TAG = "EXPERIENCE_LIST_ITEM_TEST_TAG"
